// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button (unit tests) when the component loads with checked prop should match the snapshot 1`] = `
<kv-radio-button checked="" label="Option 1" value="Option 1">
  <mock:shadow-root>
    <a class="radio-button radio-button--checked" part="radio-button">
      Option 1
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with default props should match the snapshot 1`] = `
<kv-radio-button label="Option 1" value="Option 1">
  <mock:shadow-root>
    <a class="radio-button" part="radio-button">
      Option 1
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with disabled prop should match the snapshot 1`] = `
<kv-radio-button disabled="" label="Option 1" value="Option 1">
  <mock:shadow-root>
    <a class="radio-button radio-button--disabled" part="radio-button">
      Option 1
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with preventDefault prop should match the snapshot 1`] = `
<kv-radio-button label="Option 1" prevent-default="" value="Option 1">
  <mock:shadow-root>
    <a class="radio-button" part="radio-button">
      Option 1
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with value prop should match the snapshot 1`] = `
<kv-radio-button label="Option 1" value="opt1">
  <mock:shadow-root>
    <a class="radio-button" part="radio-button">
      Option 1
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;
